# vulkan-samples

./: .gitignore  Cargo.toml  README
shaders/: 001_compute_pipeline.comp  002_compute_pipeline_2_buffers.comp  002_compute_pipeline_2_buffers.comp.spv  003_swapchain.frag  003_swapchain.frag.spv  003_swapchain.vert  003_swapchain.vert.spv  004_hello_cube.frag  004_vertex_buffer.frag.spv  004_vertex_buffer.vert  004_vertex_buffer.vert.spv  006_spinning_cube.frag  006_spinning_cube.vert  006_spinning_cube.vert.spv  006_spinning_triangle.frag.spv  006_spinning_triangle.vert  006_spinning_triangle.vert.spv  007_textured_triangle.frag  007_textured_triangle.frag.spv  007_textured_triangle.vert  007_textured_triangle.vert.spv  README  simple.comp.spv
src/: main.rs
