[package]
name = "vk_001_compute_pipeline"
version = "0.1.0"
authors = ["jordanbrion"]

[dependencies]
ash = "0.29.0"
sdl2 = "0.32.2"
num = "0.2.0"
nalgebra-glm = "0.5.0"
jpeg-decoder = "0.1"
png = "0.15.2"
gst = { package = "gstreamer", version = "0.24.2" }
glib = "0.21.3"
anyhow = "1.0.100"
termion = "4.0.5"
gstreamer-rtsp-server = "0.24.2"
gstreamer-utils = "0.24.2"
gstreamer-app = "0.24.2"
gstreamer-video = "0.24.2"
glib-sys = "0.21.2"
